syntax = "proto3";
package aevatar.ai;
option csharp_namespace = "Aevatar.AI.Abstractions";

message ChatRequestEvent  { string prompt = 1; string session_id = 2; map<string, string> metadata = 3; }
message ChatResponseEvent { string content = 1; string session_id = 2; }

message TextMessageStartEvent   { string session_id = 1; string agent_id = 2; }
message TextMessageContentEvent { string delta = 1; string session_id = 2; }
message TextMessageEndEvent     { string content = 1; string session_id = 2; }

message ToolCallEvent   { string tool_name = 1; string arguments_json = 2; string call_id = 3; }
message ToolResultEvent { string call_id = 1; string result_json = 2; bool success = 3; string error = 4; }

message RoleGAgentState { string role_name = 1; int32 message_count = 2; }
